# Copyright (c) 2021 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of demcompare
# (see https://github.com/CNES/demcompare).
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Demcompare setup configuration file

# package setup main metadata
[metadata]
name = demcompare
author = CNES
url = https://github.com/CNES/demcompare
description = A tool to compare Digital Elevation Models
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
platform = any
keywords: demcompare,3D,DEM,cars,pandora, photogrammetry
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6

# demcompare packages dependencies
install_requires =
    importlib-metadata; python_version<"3.8"
    importlib; python_version>"3.8"
    numpy
    matplotlib
    xarray>=0.13.*
    scipy
    rasterio
    pyproj
    astropy
    sphinx
    lib_programname
    argcomplete

package_dir =
    . = demcompare
packages = find:

[options.extras_require]
dev =
    pre-commit
    pylint
    black
    flake8
    flake8-copyright
    isort
    setuptools_scm
    virtualenv
    configupdater


[options.package_data]
    demcompare = geoid/*.gtx

# demcompare entry points cli scripts
# demcompare : main cli Program
# demcompare_with_baseline : test tool for CI.
[options.entry_points]
console_scripts =
    demcompare = demcompare.demcompare:main
    demcompare_with_baseline = demcompare.demcompare_with_baseline:main

# Specify no universal wheel supported (only Python3)
[bdist_wheel]
universal = false

# Flake8 configuration
[flake8]
exclude = .git, venv, build, dist, tests/test_output,
#ignore =
#    E203,E305,E402,E501,E721,E741,F403,F405,F821,F841,F999,W503,W504,C408,E302,W291,E303,
    # these ignores are from flake8-bugbear; please fix!
#    B007,B008,
    # these ignores are from flake8-comprehensions; please fix!
#    C400,C401,C402,C403,C404,C405,C407,C411,C413,C414,C415,
#    D100,D101,D104,D107,
#    S404,S501,S603
# from black compatibility
extend-ignore = E203, W503
max-complexity = 15
max-line-length = 80
#show-source = true
# Flake8-copyright
copyright-check = True
# C errors are not selected by default, so add them to your selection
select = E,F,W,C
