# Copyright (c) 2023 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of demcompare
# (see https://github.com/CNES/demcompare).
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# Demcompare setup configuration file

# package setup main metadata
[metadata]
name = demcompare
author = CNES
author_email = cars@cnes.fr
url = https://github.com/CNES/demcompare
description = A tool to compare Digital Elevation Models
long_description = file:README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
platform = any
keywords= demcompare,3D,DEM,cars,pandora, photogrammetry
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8

setup_requires =
    setuptools>=65.5
    setuptools_scm[toml]>=6.2 # Following https://pypi.org/project/setuptools-scm/
    wheel

# demcompare packages dependencies
install_requires =
    numpy
    matplotlib>=3.5.1
    xarray>=0.13.0
    scipy!=1.10.0
    rasterio
    pyproj
    astropy
    sphinx
    lib_programname
    argcomplete
    json_checker
    dash_bootstrap_components

package_dir =
    . = demcompare
packages = find:

[options.extras_require]
dev =
    pre-commit
    isort>=5.8.0                  # Check imports
    black>=21.5b0                 # PEP8 format code
    flake8>=3.9.1                 # General linter
    flake8-comprehensions>=3.4.0  # Check list/dict/set
    flake8-bugbear>=21.4.3        # Add some rules to flake8
    pylint                        # General linter
    setuptools_scm                # versions from git tag
    virtualenv
    configupdater
    twine                         # for pypi upload
    build
    pytest
    pytest-cov
    pytest-sugar
    tox
    mypy
    black[jupyter]

docs =
    sphinx>=4.3.0
    sphinx_rtd_theme>=0.5.1
    sphinx_autoapi
    sphinx_tabs

notebook =
    bokeh
    matplotlib
    notebook
    tabulate
    jupyter_dash

[options.package_data]
    demcompare = geoid/*.gtx, logging.json

# demcompare entry points cli scripts
# demcompare : main cli Program
[options.entry_points]
console_scripts =
    demcompare = demcompare.demcompare:main

# Specify no universal wheel supported (only Python3)
[bdist_wheel]
universal = false

# Flake8 configuration
[flake8]
exclude = .git, venv, build, dist, tests/test_output,
# Add flake8 ignored rules
ignore =
# from black compatibility
extend-ignore = E203, W503
max-complexity = 15
max-line-length = 80
#show-source = true
# errors types are not selected by default, so add them to your selection
select = E,F,W,C,B9,C4,B
