[metadata]
name = mesh3d-lib
version = 0.1.0.dev0
author =
    Chloé Thenoz
    Lisa Vothanh
author_email =
    chloe.thenoz@magellium.fr
    lisa.vothanh@magellium.fr
description = Reconstruct a textured and semantized 3D mesh from satellite point cloud.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Private :: Do Not Upload
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
install_requires =
    numpy>=1.20.0,<1.22.0
    torch>=1.8.2,<1.11.0
    torchvision>=0.9.2,<0.12.0
    pytorch-ignite>=0.4.0,<0.5.0
    Shapely>=1.7.0,<2.0.0
    click>=7.0.0,<9.0.0
    image-dataset-viz
    matplotlib
    pandas
    pydantic>=1.8.2,<1.9.0
    polyaxon>=1.9.5
    prettytable
    rasterio
    loguru>=0.5.0,<0.6.0

# [options.entry_points]
# console_scripts =
#     maj-mns = maj_mns_lib.launcher.cli:cli

[options.extras_require]
lint =
    nox
    flake8
    pep8-naming
    flake8-mutable
    flake8-eradicate
    flake8-comprehensions
    flake8-import-order
tests =
    nox
    pytest
    tqdm
    pytest-cov

[options.packages.find]
exclude =
    tests
    *.tests
    tests.*
    docs
    docs.*

[flake8]
max-line-length = 120
ignore = F401,E402,F403,W503,D100,D104,D107,D203,D213,D406,D407
exclude = .git,
          __pycache__,
          build,
          dist,
show-source = 1
application-import-names = mesh3d_lib
import-order-style = pep8
