[metadata]
name = mesh3d-lib
version = 0.1.0.dev0
author =
    Chloé Thenoz
    Lisa Vothanh
author_email =
    chloe.thenoz@magellium.fr
    lisa.vothanh@magellium.fr
description = Reconstruct a textured and semantized 3D mesh from satellite point cloud.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Private :: Do Not Upload
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    laspy
    open3d
    pandas
    scipy
    matplotlib
    click
    loguru

[options.entry_points]
console_scripts =
    mesh3d = mesh3d_lib.launcher.cli:cli

[options.extras_require]
lint =
    nox
    flake8
    pep8-naming
    flake8-mutable
    flake8-eradicate
    flake8-comprehensions
    flake8-import-order
tests =
    nox
    pytest
    tqdm
    pytest-cov

[options.packages.find]
exclude =
    tests
    *.tests
    tests.*
    docs
    docs.*

[flake8]
max-line-length = 120
ignore = F401,E402,F403,W503,D100,D104,D107,D203,D213,D406,D407
exclude = .git,
          __pycache__,
          build,
          dist,
show-source = 1
application-import-names = mesh3d_lib
import-order-style = pep8
